# cdek-burnout-ai

./: .env.example  README.md  docker-compose.yaml
backend/: Dockerfile  db_utils.py  main.py  pyproject.toml
backend/graph/: answer_schema.py  config.py  graph.py  tasks_generation.py
backend/statistic_analyzer/: analyzer.py  answer_schema.py  config.py
db/: init.sql  test.ipynb
web/: Dockerfile  package-lock.json  package.json  vite.config.js
web/src/: App.css  App.tsx  main.tsx  styles.css
web/src/data/: maslachTest.ts
web/src/pages/: DiagnosisFlow.tsx  HomePage.css  HomePage.tsx  LoginPage.css  LoginPage.tsx  MaslachTest.tsx  ReactionTest.tsx  ReactionTestCDEK.css  Results.tsx  Statistics.css  Statistics.tsx
web/src/styles/: main.scss
web/src/types/: index.ts
